--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "scripts": {
+  "test": "echo \"No tests specified\" && exit 0"
+}
+
   "keywords": [
     "ecosystem:cordova"
   ],
