--- a/manifest.json
+++ b/manifest.json
@@ -7,4 +7,16 @@
     "orientation": "portrait",
     "scope": "/",
     "start_url": "/"
-  }
+  }  "icons": [
+        {
+            "src": "Logo App-192x192.jpg",
+            "sizes": "192x192",
+            "type": "image/jpeg"
+        },
+        {
+            "src": "Logo App-512x512.jpg",
+            "sizes": "512x512",
+            "type": "image/jpeg"
+        }
+    ]
+}
