--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,14 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "Logo App-192x192.jpg",
+            "src": "apple-touch-icon.png",
             "sizes": "192x192",
-            "type": "image/jpeg"
+            "type": "image/png"
         },
         {
-            "src": "Logo App-512x512.jpg",
+            "src": "apple-touch-icon.png",
             "sizes": "512x512",
-            "type": "image/jpeg"
+            "type": "image/png"
         }
     ]
 }
